--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -1,13 +1,20 @@
-a {
-  font-size: 16px;
-  text-decoration: none;
-  color: rgb(0, 0, 0);
-}
+.navbar {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 20%;
+  height: 100vh;
+  a {
+    font-size: 16px;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+  }
 
-.link {
-  color: rgb(255, 61, 61);
-}
+  .link {
+    color: rgb(255, 61, 61);
+  }
 
-.active {
-  color: rgb(61, 255, 213);
+  .active {
+    color: rgb(61, 255, 213);
+  }
 }
