--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Lora", serif;
+}
+
+body {
+  margin: 0% 10%;
 }
