--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -1,23 +1,39 @@
 .navbar {
+  margin: 50px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   a {
     font-size: 16px;
     text-decoration: none;
     color: rgb(0, 0, 0);
   }
+  .logo {
+    font-size: 2rem;
+    font-weight: 700;
+  }
   .nav {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 20%;
-    height: 100vh;
+    gap: 30px;
 
+    a {
+      font-size: 1.2rem;
+    }
     .link {
-      color: rgb(255, 61, 61);
+      color: rgb(102, 102, 102);
+      font-style: italic;
     }
 
     .active {
-      color: rgb(61, 255, 213);
+      color: rgb(0, 0, 0);
     }
+    // UNDERLINE ON ACTIVE CLASS
+    // .active::after {
+    //   content: " ";
+    //   height: 1px;
+    //   width: 100%;
+    //   display: block;
+    //   background-color: #000000;
+    // }
   }
 }
