--- a/src/styles/components/searchbar.scss
+++ b/src/styles/components/searchbar.scss
@@ -1,27 +1,47 @@
 .search {
   display: flex;
   justify-content: space-between;
+
   .searchbar {
-    border: 0.8px solid #000000;
+    border: 1.5px solid #000000;
     height: 40px;
     width: 80%;
+    padding: 0 5px;
+    font-size: 1.1rem;
+  }
+  .searchbar:focus {
+    outline: none !important;
+    border: 2px solid #000000;
   }
   .searchbutton {
-    font-size: 1rem;
-    font-style: italic;
+    font-size: 1.1rem;
     font-weight: bold;
     height: 40px;
     width: 15%;
-    border: 0.8px solid #000000;
+    border: 1.5px solid #000000;
     background-color: #ffffff;
+    cursor: pointer;
   }
 }
 
 .searchby {
+  margin-top: 10px;
   display: flex;
+  gap: 20px;
 
+  span {
+    font-weight: 700;
+  }
   ul {
+    color: #121212;
     display: flex;
+    gap: 15px;
     list-style: none;
+    cursor: pointer;
+
+    .active {
+      font-weight: 700;
+      color: rgb(0, 0, 0);
+    }
   }
 }
